--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,15 @@
     grid-area: header;
     background-color: #B3E0FF;
 }
+
 .header img {
     width: 50px;
+}
+
+.loginBlock {
+    float: right;
+}
+
+.loginBlock a {
+    color: white;
 }
