feat: stopSubmit in login form

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,9 @@
     grid-area: content;
     background-color: #ffc;
 }
+
+.formSummaryError {
+    border: 2px solid red;
+    padding: 5px;
+    color: red;
+}
