--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 .app-wrapper-content {
     grid-area: content;
     background-color: #ffc;
+    min-height: calc(100vh - 60px);
 }
 
 .formSummaryError {
