--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,23 +1,28 @@
 .dialogs {
     display: grid;
-    grid-template-columns: 2fr 10fr;
+    grid-template-columns: 1fr 3fr;
 }
 
-.dialogsItems {
-    padding: 10px;
+
+
+.items {
+    padding-left: 15px;
+    padding-top: 17px;
 }
 
-.dialog {}
 
-.dialog .active {
-    color: blue;
-    font-weight: bold;
-}
 
 .messages {
-    padding: 10px;
+    padding-top: 15px;
 }
 
-.message {
-
+.textAreaMessages{
+   display: flex;
+    justify-content: center;
+}
+.mainContainer{
+    max-width: 556px;
+}
+.messagesContainer{
+    margin-top: 34px;
 }
