--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,3 +1,68 @@
-.userPhoto {
-    width: 100px;
+.Content {
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    flex-direction: column;
+    max-width: 100%;
+    background-color: #2c4141;
+}
+
+.Img {
+    margin: 4px;
+    width: 80px;
+    height: 80px;
+}
+
+
+.nameStatus {
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    justify-content: space-around;
+}
+
+
+.userInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 8px;
+    border-bottom: solid 2px #8cc8ff;
+}
+
+.pages {
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+}
+
+.page {
+    font-size: 20px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.activePage {
+    padding: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.paginationContainer{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.status{
+    word-break: break-word;
+}
+.buttonFollowUnfollow{
+    margin: 10px;
+}
+@media screen and (max-width: 720px) {
+ .paginationBarMedia{
+
+ }
+
 }
